<resources>
    <string name="app_name">C196IanMitchum</string>
    <string name="start_date">start date</string>
    <string name="end_date">end date</string>
    <string name="name">name</string>
    <string name="phone">phone</string>
    <string name="email">email</string>
    <string-array name="status_array">
        <item>In Progress</item>
        <item>Completed</item>
        <item>Dropped</item>
        <item>Plan to take</item>
    </string-array>
    <string-array name="assessment_array">
        <item>Performance Assessment</item>
        <item>Objective Assessment</item>
    </string-array>
</resources>